--- a/covid.html
+++ b/covid.html
@@ -15,20 +15,31 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-    <span id="credits"><a href="https://www.github.com/hrushikeshrv" target="_blank">@hrushikeshrv</a></span>
+    <span id="credits"><a href="https://www.github.com/hrushikeshrv" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+        </svg>
+        <span>hrushikeshrv</span>
+    </a></span>
 
     <div class="flexbox-column">
-        <div class="flexbox-row pad-30 mar-10 jcse" style="padding-bottom: 0;">
-            <div class=" flexbox-column new-cases-today-container ajc">
+        <div class="flexbox-row pad-30 mar-10 jcse" id="statistic-container">
+            <div class=" flexbox-column stat-container ajc">
                 <span id="new-cases-today">---</span>
                 <span class="mono-font">New Cases</span>
-                <small>On <span id="new-cases-date"></span></small>
+                <small>On <span class="updated-on"></span></small>
             </div>
-            <div class=" flexbox-column active-cases-container ajc">
+            <div class="flexbox-column stat-container ajc">
+                <span id="delta-cases-today">---</span>
+                <span class="mono-font">Change In Active Cases</span>
+                <small><span id="delta-indicator-svg" style="margin-right: 5px;"></span> On <span class="updated-on"></span></small>
+            </div>
+            <div class=" flexbox-column stat-container ajc">
                 <span id="active-cases">---</span>
                 <span class="mono-font">Active Cases Right Now</span>
             </div>
-            <div class=" flexbox-column pandemic-status-container ajc">
+            <div class=" flexbox-column stat-container ajc">
                 <span id="pandemic-status">---</span>
                 <span class="mono-font">Pandemic Status</span>
             </div>
@@ -36,10 +47,10 @@
 
         <div class="chart-group-container">
             <div class="flexbox-column pad-30">
-                <small>Last updated on <span id="last-updated"></span></small>
+                <small>Last updated on <span class="updated-on"></span></small>
                 <h1>Daily New Cases</h1>
                 <span class="bold-font">Start - Present</span>
-                <div id="daily-cases-start-present-container" style="width: 100%; height: 500px;">
+                <div id="daily-cases-start-present-container" class="graph-container">
                     <!-- <canvas id="daily-cases-start-present" width="100%" height="400px"></canvas> -->
                 </div>
             </div>
@@ -47,14 +58,14 @@
             <div class="flexbox-row pad-30">
                 <div class="flexbox-column pad-10 column-half">
                     <span class="bold-font">Last 30 days</span>
-                    <div id="daily-cases-30-days-container" style="width: 100%; height: 500px;">
+                    <div id="daily-cases-30-days-container" class="graph-container">
                         <!-- <canvas id="daily-cases-30-days" width="100%" height="400px"></canvas> -->
                     </div>
                 </div>
     
                 <div class="flexbox-column pad-10 column-half">
                     <span class="bold-font">Last 7 days</span>
-                    <div id="daily-cases-7-days-container" style="width: 100%; height: 500px;">
+                    <div id="daily-cases-7-days-container" class="graph-container">
                         <!-- <canvas id="daily-cases-7-days" width="100%" height="400px"></canvas> -->
                     </div>
                 </div>
@@ -65,7 +76,7 @@
             <div class="flexbox-column pad-30">
                 <h1>Daily Recoveries</h1>
                 <span class="bold-font">Start - Present</span>
-                <div id="daily-recoveries-start-present-container" style="width: 100%; height: 500px;">
+                <div id="daily-recoveries-start-present-container" class="graph-container">
                     <!-- <canvas id="daily-recoveries-start-present" width="100%" height="400px"></canvas> -->
                 </div>
             </div>
@@ -73,14 +84,14 @@
             <div class="flexbox-row pad-30">
                 <div class="flexbox-column pad-10 column-half">
                     <span class="bold-font">Last 30 days</span>
-                    <div id="daily-recoveries-30-days-container" style="width: 100%; height: 500px;">
+                    <div id="daily-recoveries-30-days-container" class="graph-container">
                         <!-- <canvas id="daily-recoveries-30-days" width="100%" height="400px"></canvas> -->
                     </div>
                 </div>
     
                 <div class="flexbox-column pad-10 column-half">
                     <span class="bold-font">Last 7 days</span>
-                    <div id="daily-recoveries-7-days-container" style="width: 100%; height: 500px;">
+                    <div id="daily-recoveries-7-days-container" class="graph-container">
                         <!-- <canvas id="daily-recoveries-7-days" width="100%" height="400px"></canvas> -->
                     </div>
                 </div>
