Add error notice on covid

--- a/covid.html
+++ b/covid.html
@@ -22,7 +22,13 @@
         </svg>
         <span>hrushikeshrv</span>
     </a></span>
-
+    <div id="ajax-error" style="display: none;">
+        <h2>AJAX Error :/</h2>
+        <p>Something went wrong while fetching and processing the data.</p>
+        <p>
+            It's possible the service I'm taking data from has been discontinued.
+        </p>
+    </div>
     <div class="flexbox-column">
         <div class="flexbox-row pad-30 mar-10 jcse" id="statistic-container">
             <div class=" flexbox-column stat-container ajc">
