--- a/covid.html
+++ b/covid.html
@@ -17,36 +17,38 @@
 <body>
     <span id="credits"><a href="https://www.github.com/hrushikeshrv" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>don
           <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
         </svg>
         <span>hrushikeshrv</span>
     </a></span>
     <div id="ajax-error" style="display: none;">
-        <h2>AJAX Error :/</h2>
-        <p>Something went wrong while fetching and processing the data.</p>
-        <p>
-            It's possible the service I'm taking data from has been discontinued.
-        </p>
+        <div>
+            <h2>AJAX Error :/</h2>
+            <p>Something went wrong while fetching and processing the data.</p>
+            <p>
+                It's possible the service I'm taking data from has been discontinued.
+            </p>
+        </div>
     </div>
     <div class="flexbox-column">
         <div class="flexbox-row pad-30 mar-10 jcse" id="statistic-container">
             <div class=" flexbox-column stat-container ajc">
-                <span id="new-cases-today">---</span>
+                <span id="new-cases-today"><span class="donutSpinner medium"></span></span>
                 <span class="mono-font">New Cases</span>
                 <small>On <span class="updated-on"></span></small>
             </div>
             <div class="flexbox-column stat-container ajc">
-                <span id="delta-cases-today">---</span>
+                <span id="delta-cases-today"><span class="donutSpinner medium"></span></span>
                 <span class="mono-font">Change In Active Cases</span>
                 <small><span id="delta-indicator-svg" style="margin-right: 5px;"></span> On <span class="updated-on"></span></small>
             </div>
             <div class=" flexbox-column stat-container ajc">
-                <span id="active-cases">---</span>
+                <span id="active-cases"><span class="donutSpinner medium"></span></span>
                 <span class="mono-font">Active Cases Right Now</span>
             </div>
             <div class=" flexbox-column stat-container ajc">
-                <span id="pandemic-status">---</span>
+                <span id="pandemic-status"><span class="donutSpinner medium"></span></span>
                 <span class="mono-font">Pandemic Status</span>
             </div>
         </div>
